# lrtjax

./: README.md  lrt_2d_demo.py  lrt_generalized_demo.py  lrt_generalized_demo_jax.py  pyproject.toml
src/lrtjax/: __init__.py  common.py  lrt_2d.py  lrt_generalized_jax.py  lrt_generalized_numpy.py
