[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lrtjax"
version = "0.1.0"
description = "Alternating direction method of multipliers implementation for Low-Rank Tensor (LRT) Decomposition"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "jax[cuda12]>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lrtjax"]
